Opened 11 years ago
Closed 11 years ago
#8659 closed bug (fixed)
[Media] resizing it shouldn't resize MediaListItem view (easy)
Reported by: | diver | Owned by: | anevilyak |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Preferences/Media | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #8665 | |
Platform: | All |
Description (last modified by )
This is hrev44272
Possible ways to fix this:
- decrease weight on list view / increase weight on content view
- decrease max width on list view
Attachments (2)
Change History (8)
by , 11 years ago
comment:1 by , 11 years ago
Description: | modified (diff) |
---|---|
Summary: | [Media] resizing it shouldn't resize MediaListItem view → [Media] resizing it shouldn't resize MediaListItem view (easy) |
comment:2 by , 11 years ago
by , 11 years ago
Attachment: | fixed-width.patch added |
---|
Giving the scrollView a fixed size, setting explicit min-size.
comment:3 by , 11 years ago
patch: | 0 → 1 |
---|
comment:4 by , 11 years ago
Blocking: | 8665 added |
---|
comment:5 by , 11 years ago
Hi Humdinger, thanks for working on this :)
I haven't tried applying/testing/compiling, but your changes look mostly good to me. Instead of using SetExplicitMinSize(), though, you should be able to just add some space for padding in MediaListItem::ItemWidth(). I'm pretty sure that that should have the same effect.
Again, thanks for looking into this!
comment:6 by , 11 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Thanks for that hint. Committed with hrev44278.
Hi Humdinger, thanks for working on this :)
Oh well... As a C++ dwarf I have to aim for the low hanging fruit. And at times even need a leg-up... :)
Thanks!
Just assigning a weight of 0.0f to the scrollView looks like the easiest way. Though having no padding to the right of the list items feels a bit cramped. Is what I have done with SetExplicitMinSize() in the attached patch any good or is this not the way to handle this? Noob here. Opinions welcome.