Small visual changes to left  scroll view. Fixes #8659.

Fixed width of left scroll view.
Added padding to list items.
Thanks yourpalal for your hints.